--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1019,6 +1019,13 @@
         "start_date": "Start Date",
         "location": "Location",
         "location_placeholder": "Enter Location",
+        "organizer": "Organizer",
+        "organizer_placeholder": "Person or club repsonsible for organizing this tournament",
+        "basic_info": "Basic Information",
+        "basic_info_desc": "Essential tournament details",
+        "configuration": "Configuration",
+        "configuration_desc": "Tournament settings and options",
+        "additional_info_desc": "Optional details and description",
         "category": "Category (optional)",
         "rating_coef": "Rating Coefficient",
         "rating_coef_description": "Rating coefficient for this tournament. Used to calculate player ratings.",
@@ -1045,8 +1052,8 @@
         "max_team_size": "Maximum Team Size",
         "private": "Private Tournament",
         "private_description": "Make this tournament private (only seen to admins)",
-        "ranking": "Include ranking",
-        "ranking_description": "Enable ranking for this tournament",
+        "ranking": "Rating Tournament",
+        "ranking_description": "Will this tournament affect the national ranking?",
         "team": "Doubles or Teams",
         "team_description": "Enable tournament with either doubles or team matchups",
         "main_bracket": "Main Bracket",
@@ -1057,11 +1064,15 @@
         "max_participants": "Maximum number of participants"
       },
       "tables": {
-        "no_tables": "No tables have been assigned yet",
+        "no_tables": "No tables available",
         "title": "Tables",
         "taken": "Occupied",
         "free": "Free",
-        "empty_placeholder": "Table available for matches"
+        "empty_placeholder": "Table available for matches",
+        "table": "Table",
+        "player_1": "Player 1",
+        "player_2": "Player 2",
+        "class": "Class"
       },
       "participants": {
         "round_robin": "Group Draw Participants",
@@ -1270,7 +1281,8 @@
             "team_name_placeholder": "Insert team name",
             "name_placeholder": "Name",
             "generate_pairs": "Generate Pairs",
-            "generate_subgroups": "Generate Subgroups",  
+            "generate_subgroups": "Generate Subgroups",
+            "generate_tables": "Generate Tables",
             "download_template": "Download Template",
             "import_excel": "Import Excel",
             "add_player": {
@@ -1438,16 +1450,16 @@
       },
       "timetable": {
         "settings": "Timetable Settings",
-        "start_date": "Class start date",
-        "start_time": "Class start time",
-        "match_duration": "Average match duration",
+        "start_date": "Tournament class start date",
+        "start_time": "Tournament class start time",
+        "match_duration": "Expected match duration",
         "match_duration_desc": "Expected time per match (5-120 minutes)",
         "break_duration": "Break between matches",
         "break_duration_desc": "Buffer time between matches (0-60 minutes)",
         "generate": "Generate Timetable",
         "reset": "Reset",
         "generating": "Generating...",
-        "timetabled_tournament": "Timetabled Tournament",
+        "timetabled_tournament": "Timetabled Class",
         "timetabled_tournament_desc": "Enable to show timetable settings and schedule matches automatically",
         "schedule": "Schedule",
         "configurations": "Timetable Configurations",
@@ -1458,7 +1470,14 @@
         "configurations_saved": "Timetable configurations saved successfully",
         "configurations_save_error": "Failed to save timetable configurations",
         "saving": "Saving...",
-        "save_configurations": "Save Configurations"
+        "save_configurations": "Save Configurations",
+        "enable_first": "Please enable timetabling first",
+        "generated_successfully": "Timetable generated successfully",
+        "generation_error": "Failed to generate timetable",
+        "update": "Update Timetable",
+        "updating": "Updating...",
+        "updated_successfully": "Timetable updated successfully",
+        "update_error": "Failed to update timetable"
       }
     },
     "blogs": {
