--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -1,6 +1,6 @@
 {
   "eltl": {
-    "name": "Eesti lauatenniseliit"
+    "name": "Eesti Lauatenniseliit"
   },
   "common": {
     "cancel": "Katkesta",
@@ -1023,9 +1023,9 @@
         "woman_weight": "Naiste reitingu kaal",
         "woman_weight_description": "Naiste reiting korrutatakse selle kaaluga",
         "title_edit": "Muuda turniiri",
-        "title_create_table": "Loo grupp",
-        "title_edit_table": "Muuda gruppi",
-        "title_delete_table": "Kustuta grupp",
+        "title_create_table": "Loo klass",
+        "title_edit_table": "Muuda klassi",
+        "title_delete_table": "Kustuta klass",
         "button_create": "Loo",
         "button_edit": "Uuenda turniiri andmeid",
         "back_button": "Tagasi turniiride juurde",
@@ -1034,6 +1034,13 @@
         "start_date": "Alguskuupäev",
         "location": "Asukoht",
         "location_placeholder": "Sisestage asukoht",
+        "organizer": "Korraldaja",
+        "organizer_placeholder": "Isik või klubi kes antud võistlust korraldab",
+        "basic_info": "Põhiandmed",
+        "basic_info_desc": "Turniiri olulised andmed",
+        "configuration": "Seadistused",
+        "configuration_desc": "Turniiri valikud ja seaded",
+        "additional_info_desc": "Siia võid lisada nt. võistluse juhendi, kiireloomulisi teadaandeid jne.",
         "rating_coef": "Reitingu koefitsient",
         "rating_coef_description": "Kasutatakse reitingu arvutamisel",
         "category": "Kategooria (valikuline)",
@@ -1054,7 +1061,7 @@
           "tabletennis": "Lauatennis"
         },
         "end_date": "Lõppkuupäev",
-        "start_date_placeholder": "Pick a date",
+        "start_date_placeholder": "Vali kuupäev",
         "type": "Võistlussüsteem / Tabeli tüüp",
         "type_placeholder": "Vali turniiri tüüp",
         "max_team_size": "Maksimaalne tiimi suurus",
@@ -1073,11 +1080,15 @@
         "max_participants": "Maksimaalne osalejate arv"
       },
       "tables": {
-        "no_tables": "Laudu pole veel lisatud",
+        "no_tables": "Laudu pole saadaval",
         "title": "Mängulauad",
         "taken": "Võetud",
         "free": "Vaba",
-        "empty_placeholder": "Laud on mänguks vaba"
+        "empty_placeholder": "Laud on mänguks vaba",
+        "table": "Laud",
+        "player_1": "Mängija 1",
+        "player_2": "Mängija 2",
+        "class": "Klass"
       },
       "participants": {
         "round_robin": "Alagruppides osalejad",
@@ -1287,6 +1298,7 @@
             "name_placeholder": "Nimi",
             "generate_pairs": "Genereeri Paarid",
             "generate_subgroups": "Genereeri Alagrupid",
+            "generate_tables": "Genereeri Tabelid",
             "download_template": "Laadi alla Excel mall",
             "import_excel": "Impordi Excel",
             "add_player": {
@@ -1360,9 +1372,9 @@
       },
       "confirmations": {
         "delete": {
-          "title": "Kustuta Turniir",
+          "title": "Kustuta",
           "question": "Olete kindel?",
-          "description": "Peale toimingut on turniir kustutatud ja seda ei saa tagasi võtta.",
+          "description": "Peale toimingut ei saa tagasi võtta.",
           "cancel": "Katkesta",
           "deleting": "Kustutamine..."
         },
@@ -1425,7 +1437,7 @@
           "modify": "Uuenda tulemus",
           "serial_number": "JKNR.",
           "round": "Ring",
-          "class": "Grupp",
+          "class": "Klass",
           "table": "Laud",
           "confirm": "Kinnita",
           "participant_1": "P1",
@@ -1454,27 +1466,34 @@
       },
       "timetable": {
         "settings": "Ajakava seaded",
-        "start_date": "Turniiri alguskuupäev",
-        "start_time": "Turniiri algusaeg",
-        "match_duration": "Keskmine mängu kestus",
+        "start_date": "Võistlusklassi alguskuupäev",
+        "start_time": "Võistlusklassi algusaeg",
+        "match_duration": "Eeldatav mängu kestus",
         "match_duration_desc": "Eeldatav aeg mängu kohta (5-120 minutit)",
         "break_duration": "Paus mängude vahel",
-        "break_duration_desc": "Puhver aeg mängude vahel (0-60 minutit)",
-        "generate": "Genereeri ajakava",
+        "break_duration_desc": "Puhveraeg mängude vahel (0-60 minutit)",
+        "generate": "Lisa klass ajakavasse",
         "reset": "Lähtesta",
         "generating": "Genereeritakse...",
-        "timetabled_tournament": "Ajakavaga turniir",
+        "timetabled_tournament": "Ajakavaga võistlusklass",
         "timetabled_tournament_desc": "Lülita sisse ajakava sätete näitamiseks ja mängude automaatseks ajastamiseks",
         "schedule": "Ajakava",
         "configurations": "Ajakava seaded",
         "configurations_description": "Konfigureeri iga võistlusklassi jaoks ajakava seaded: kas ajakava on lubatud, algusaeg ja mängu kestused",
-        "enable_timetabling": "Luba ajakava",
+        "enable_timetabling": "Ajakavapõhine klass",
         "date_range_info": "Kuupäev peab olema turniiri kuupäevade vahemikus: {{start}} - {{end}}",
         "no_data": "Andmed puuduvad",
         "configurations_saved": "Ajakava seaded salvestatud edukalt",
         "configurations_save_error": "Ajakava sätete salvestamine nurjus",
         "saving": "Salvestatakse...",
-        "save_configurations": "Salvesta seaded"
+        "save_configurations": "Salvesta seaded",
+        "enable_first": "Lülita esmalt ajakava sisse",
+        "generated_successfully": "Ajakava genereeritud edukalt",
+        "generation_error": "Ajakava genereerimine nurjus",
+        "update": "Uuenda Ajakava",
+        "updating": "Uuendatakse...",
+        "updated_successfully": "Ajakava uuendatud edukalt",
+        "update_error": "Ajakava uuendamine nurjus"
       }
     },
     "blogs": {
