--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -608,6 +608,11 @@
     "registration": "Registreerimine",
     "registration_info": "Osalemiseks on vajalik registreerimine",
     "onsite_registration_only": "Sellele võistlusele registreerimine kohapeal",
+    "registration_google_forms_description": "Registreerimine sellele võistlusele toimub Google Forms kaudu",
+    "registration_google_forms_button": "Registreeru Google Forms kaudu",
+    "registration_excel_description": "Registreerimine sellele võistlusele toimub Excel tabeli kaudu",
+    "registration_excel_button": "Registreeru Excel tabeli kaudu",
+    "registration_onsite_description": "Registreerimine sellele võistlusele toimub kohapeal",
     "about_event": "Kirjeldus",
     "view_in_maps": "Vaata kaardilt",
     "contact_organizer": "Võta ühendust korraldajaga",
@@ -1001,7 +1006,8 @@
           "total_tables_max": "Laudade arv ei tohi ületada 200",
           "category": "Kategooria on kohustuslik",
           "rating_coef_min": "Reitingu koefitsient peab olema suurem kui 1",
-          "rating_coef_max": "Reitingu koefitsient peab olema maksimaalselt 2"
+          "rating_coef_max": "Reitingu koefitsient peab olema maksimaalselt 2",
+          "registration_type": "Registreerimise tüüp on kohustuslik"
         },
         "tournament_tables": {
           "single_elimination": "Klassikaline Üksikeliminatsioon",
@@ -1077,7 +1083,16 @@
         "consolation_bracket_type": "Lohutusturniiri tabel",
         "consolation_bracket_description": "Eraldi tabel mängijatele, kes finaalturniirie ei jõudnud",
         "consolation_bracket_placeholder": "Vali Lohutusturniiri tabeli formaat",
-        "max_participants": "Maksimaalne osalejate arv"
+        "max_participants": "Maksimaalne osalejate arv",
+        "registration_type": "Registreerimine",
+        "registration_type_placeholder": "Vali registreerimise tüüp",
+        "registration_onsite": "Registreerimine kohapeal võistluspaigal",
+        "registration_google_forms": "Google Forms",
+        "registration_excel": "Excel",
+        "google_forms_link": "Google Forms Link",
+        "google_forms_link_placeholder": "Sisesta Google Forms URL",
+        "excel_link": "Excel-tabeli Link",
+        "excel_link_placeholder": "Sisesta Excel-tabeli URL"
       },
       "tables": {
         "no_tables": "Laudu pole saadaval",
