--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -1084,13 +1084,13 @@
         "consolation_bracket_description": "Eraldi tabel mängijatele, kes finaalturniirie ei jõudnud",
         "consolation_bracket_placeholder": "Vali Lohutusturniiri tabeli formaat",
         "max_participants": "Maksimaalne osalejate arv",
-        "registration_type": "Registreerimine",
+        "registration_type": "Võistlusele registreerimine",
         "registration_type_placeholder": "Vali registreerimise tüüp",
         "registration_onsite": "Registreerimine kohapeal võistluspaigal",
         "registration_google_forms": "Google Forms",
         "registration_excel": "Excel",
         "google_forms_link": "Google Forms Link",
-        "google_forms_link_placeholder": "Sisesta Google Forms URL",
+        "google_forms_link_placeholder": "https://docs.google.com/forms...",
         "excel_link": "Excel-tabeli Link",
         "excel_link_placeholder": "Sisesta Excel-tabeli URL"
       },
