added more translations, added new group, fixed participant seedingheader, added types and rating information

--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -945,7 +945,7 @@
       "sidebar": {
         "dashboard": "Töölaud",
         "tournaments": "Võistlused",
-        "blogs": "Blogi",
+        "blogs": "Blogi & Uudised",
         "clubs": "Klubid",
         "feedback": "Tagasiside"
       },
@@ -1717,7 +1717,7 @@
         "club_created_error": "Klubi loomine ebaõnnestus. Palun proovige uuesti",
         "club_updated_error": "Klubi uuendamine ebaõnnestus. Palun proovige uuesti",
         "club_deleted_error": "Klubi kustutamine ebaõnnestus. Palun proovige uuesti",
-        "error": "Viga",
+        "error": "Viga - {{error}}",
         "success": "Edukas",
         "failed_to_load_players": "Klubi mängijate laadimine ebaõnnestus",
         "failed_to_load_my_clubs": "Sinu klubide laadimine ebaõnnestus",
