--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1699,7 +1699,7 @@
         "verification_unavailable": "ID verification service unavailable"
       },
       "toast": {
-        "error": "Error",
+        "error": "Error - {{error}}",
         "success": "Success",
         "failed_to_load_players": "Failed to load club players",
         "failed_to_load_my_clubs": "Failed to load your clubs",
