--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -1703,6 +1703,18 @@
           "note": "See toiming eemaldab mängija klubist, kuid ei kustuta tema kontot.",
           "cancel": "Tühista",
           "confirm": "Eemalda Mängija"
+        },
+        "add_confirmation": {
+          "title": "Lisa Mängija Klubisse",
+          "description": "Kas oled kindel, et soovid {{playerName}} lisada klubisse {{clubName}}?",
+          "cancel": "Tühista",
+          "confirm": "Lisa Mängija"
+        },
+        "add_new_confirmation": {
+          "title": "Loo ja Lisa Mängija",
+          "description": "Kas oled kindel, et soovid luua ja lisada {{playerName}} klubisse {{clubName}}?",
+          "cancel": "Tühista",
+          "confirm": "Loo Mängija"
         }
       },
       "validation": {
@@ -1729,6 +1741,19 @@
         "failed_to_add_player": "Mängija lisamine klubi ebaõnnestus",
         "failed_to_remove_player": "Mängija eemaldamine klubist ebaõnnestus",
         "missing_required_fields": "Palun täida kõik nõutavad väljad: {{fields}}"
+      },
+      "api_errors": {
+        "player_not_found": "Mängijat ID {{player_id}} ei leitud",
+        "club_not_found": "Klubi ID {{club_id}} ei leitud",
+        "player_already_in_club": "{{player_name}} on juba {{current_club_name}} liige",
+        "player_not_in_club": "{{player_name}} ei ole {{club_name}} liige",
+        "validation_failed": "Väli {{field}} on vigane: {{issue}}",
+        "required_field_missing": "{{field}} on kohustuslik",
+        "invalid_format": "{{field}} on vales vormingus",
+        "unauthorized": "Sisselogimine on nõutav",
+        "forbidden": "Teil pole selle toimingu sooritamiseks õigusi",
+        "player_added_successfully": "{{player_name}} lisatud edukalt klubisse {{club_name}}",
+        "player_removed_successfully": "{{player_name}} eemaldatud edukalt klubist {{club_name}}"
       }
     },
     "media": {
