added new dashboard and small bug fixes

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -957,6 +957,32 @@
         "good_day": "Good day",
         "good_evening": "Good evening"
       },
+      "quick_actions": {
+        "new_blog": "New Blog Post",
+        "new_blog_desc": "Create a new blog post to share news and updates",
+        "new_tournament": "New Tournament",
+        "new_tournament_desc": "Create a new tournament or competition",
+        "manage_tournaments": "Manage Tournaments",
+        "manage_tournaments_desc": "View and manage existing tournaments",
+        "manage_feedback": "Manage Feedback",
+        "manage_feedback_desc": "Give feedback to developers and report issues",
+        "manage_clubs": "Manage Clubs",
+        "manage_clubs_desc": "Manage clubs and their players",
+        "view_blogs": "View Blogs",
+        "view_blogs_desc": "View and manage blog posts",
+        "title": "Quick Actions",
+        "description": "Quickly access common tasks and actions"
+      },
+      "last_rating_calculation": "Last rating calculation",
+      "welcome_subtitle": "Enjoy your time here!",
+      "feedback_welcome": "Feedback is always welcome!",
+      "feedback_subtitle": "If you have any suggestions or issues, please let us know.",
+      "view_feedback": "View Feedback",
+      "latest_blogs": "Latest Blog Posts",
+      "latest_blogs_description": "Latest blog posts and news",
+      "view_all": "View All",
+      "error_loading_blogs": "Error loading blogs",
+      "no_blogs_yet": "No blog posts created yet",
       "missing": "Dashboard unavailable",
       "missing_subtitle": "Dashboard unavailable. Create and manage tournaments to view the dashboard.",
       "total_tournaments": "Total tournaments",
