--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -967,24 +967,24 @@
         "good_evening": "Tere õhtust"
       },
       "quick_actions": {
-        "new_blog": "Uus Blogi Postitus",
+        "new_blog": "Avalda Uudis",
         "new_blog_desc": "Loo uus blogi postitus või uudis",
-        "new_tournament": "Uus Turniir",
-        "new_tournament_desc": "Loo uus turniir või võistlus",
-        "manage_tournaments": "Halda Turniire",
-        "manage_tournaments_desc": "Vaata ja halda olemasolevaid turniire",
+        "new_tournament": "Uus Võistlus",
+        "new_tournament_desc": "Loo uus võistlus",
+        "manage_tournaments": "Halda Võistlusi",
+        "manage_tournaments_desc": "Vaata ja halda olemasolevaid võistlusi",
         "manage_feedback": "Halda Tagasisidet",
         "manage_feedback_desc": "Anna teada probleemidest või tagasisidest",
         "manage_clubs": "Halda Klubisid",
         "manage_clubs_desc": "Lisa või muuda klubide andmeid",
-        "view_blogs": "Vaata Blogisid",
-        "view_blogs_desc": "Vaata ja halda blogipostitusi",
+        "view_blogs": "Vaata Uudiseid",
+        "view_blogs_desc": "Vaata ja halda uudiseid",
         "title": "Kiired toimingud",
         "description": "Kiire juurdepääs tavalistele ülesannetele ja toimingutele"
       },
       "last_rating_calculation": "Viimane reitingu arvutus",
       "welcome_subtitle": "Naudi oma aega siin!",
-      "feedback_welcome": "Tagasiside on tere tulnud",
+      "feedback_welcome": "Tagasiside on teretulnud!",
       "feedback_subtitle": "Meie tagasiside süsteem on loodud selleks, et aidata teil jagada oma mõtteid ja ettepanekuid. Teie tagasiside aitab meil teenust parandada.",
       "view_feedback": "Anna Tagasisidet",
       "latest_blogs": "Viimased blogipostitused",
